--- a/app/static/bower.json
+++ b/app/static/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "semantic-ui": "~1.5.2"
+    "semantic-ui": "~1.5.2",
+    "highcharts": "~4.0.4",
+    "jquery": "~2.1.3"
   }
 }
