--- a/app/package.json
+++ b/app/package.json
@@ -6,9 +6,8 @@
   "dependencies": {
     "vue": "~0.11.4",
     "d3": "~3.4.13",
-    "superagent": "~0.20.0",
-    "superagent-promise": "~0.2.0",
-    "rsvp": "~3.0.16"
+    "bluebird": "~2.9.9",
+    "request-promise": "~0.4.0"
   },
   "devDependencies": {
     "grunt-browserify": "~3.1.0",
